syntax = "proto3";
package dove;
option go_package = "./dove";

enum EventType{
  ignore = 0;
  ConnAccept = 1;
  ConnClose = 2;
}


message DoveMetadata {
  int32  crcId = 1;     //请求ID
  int32  ackId = 2;     //回执ID
  string  seq = 3;       //随机数
  int64   timestamp = 4; //时间
  bytes expand = 5; //扩展参数
}

message DoveBody {
  bytes   data = 1;    // 数据
  string  msg = 2;     // 描述
  int32  code = 3;    // 状态码
  bytes   expand = 4;   //扩展参数
}

message Dove {
  DoveMetadata metadata = 1;
  DoveBody body = 2;
}